Remove jumblr library, make manual api call to tumblr (#149)